# share-expenses

./: .gitignore  README.md  manage.py  package-lock.json  package.json  requirements.txt
backend/: .gitignore  conf.py.common  main.py  manage.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 2023_12_31_1203-f6e34fb5a11c_create_table.py
backend/api_v1/: __init__.py
backend/api_v1/Member/: crud.py  dependencies.py  schemas.py  views.py
backend/api_v1/expense/: crud.py  dependencies.py  schemas.py  views.py
backend/api_v1/money_transfer/: crud.py  dependencies.py  schemas.py  views.py
backend/api_v1/place/: crud.py  dependencies.py  schemas.py  views.py
backend/api_v1/webAppUser/: crud.py  dependencies.py  schemas.py  views.py
backend/backend_api/: admin.py  models.py  serializer.py  views.py
backend/backend_api/migrations/: 0001_initial.py  0002_rename_telegram_user_id_place_telegram_user_and_more.py
backend/core/: config.py
backend/core/models/: __init__.py  base.py  db_helper.py  models.py
backend/server/accounts/: urls.py
backend/server/server/: settings.py  urls.py
backend/share_expenses/: asgi.py  settings.py  urls.py  wsgi.py
backend_api/: admin.py  apps.py  models.py  serializer.py  views.py
backend_api/migrations/: 0001_initial.py  0002_place_user_moneytransfer_expense.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: manifest.json
frontend/src/: App.js  App.tsx  Root.js  index.css  (+6 more)
share_expenses/: asgi.py  settings.py  urls.py  wsgi.py
(+89 files in other folders)
