[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Rufat <rufat@kocherbaev.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.108.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.24"}
aiosqlite = "^0.19.0"
fastapi-filter = "^1.0.0"
alembic = "^1.13.1"
uvicorn = {extras = ["standard"], version = "^0.25.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
